[package]
name = "rstop"
version = "0.1.0"
authors = ["ferdie <ferdiebergado@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.16.4"
byte-unit = "4.0.9"
# tokio = {version = "1.2.0", features = ["time", "macros", "rt-multi-thread"]}
